--- a/DeviceHandler/plots/RegisterListView.xaml
+++ b/DeviceHandler/plots/RegisterListView.xaml
@@ -15,7 +15,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="ListViewItem">
-                            <local:RegisterView DataContext="{Binding}"/>
+                            <local:RegisterView DataContext="{Binding}" Margin="0,0,0,20"/>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
