--- a/DeviceHandler/plots/RegisterView.xaml
+++ b/DeviceHandler/plots/RegisterView.xaml
@@ -6,8 +6,7 @@
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"  
              xmlns:local="clr-namespace:DeviceHandler.Plots"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             BorderBrush="{DynamicResource MahApps.Brushes.Gray1}" BorderThickness="1"
+             d:DesignHeight="450" d:DesignWidth="800"             
              Margin="2">
     
     <Grid>
@@ -18,7 +17,7 @@
             <RowDefinition Height="5"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="5"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         
@@ -110,19 +109,26 @@
                      BorderThickness="0"
                      Name="tbRawValue"/>
 
-
-
-
-
         </StackPanel>
 
-        <StackPanel Grid.Row="6" Orientation="Horizontal">
-            <TextBlock Text="Description" VerticalAlignment="Center" Margin="0,0,5,0" FontWeight="DemiBold"/>
-            <TextBox Text="{Binding ParamData.Description}" IsReadOnly="True" TextWrapping="Wrap" 
+
+        <Grid Grid.Row="6" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0" Text="Description" 
+                       VerticalAlignment="Top" FontWeight="DemiBold"/>
+            <TextBox Grid.Column="2" 
+                     Text="{Binding ParamData.Description}" 
+                     IsReadOnly="True" TextWrapping="Wrap" 
                      ScrollViewer.VerticalScrollBarVisibility="Auto" 
                      VerticalContentAlignment="Center"
                      BorderThickness="0"
                      Name="tbDescription"/>
-        </StackPanel>
+        </Grid>
+        
     </Grid>
 </UserControl>
